# nibbler

./: .gitignore  CMakeLists.txt  Display.cpp  Display.hpp  NCurses.cpp  NCurses.hpp  NCurses2.cpp  Point.cpp  Point.hpp  SDL2.cpp  SDL2.hpp  Snake.cpp  Snake.hpp  main.cpp  nibbler.cpp  nibbler.hpp  tmp.cpp  tmp.hpp
